Stripe integration, initial style change

--- a/app/views/preorder/checkout/_sidebar.html.erb
+++ b/app/views/preorder/checkout/_sidebar.html.erb
@@ -1,6 +1,12 @@
 <div class="sidebar">
   <h5>When will I be charged?</h5>
   <p>
-    We recommend that you only charge backers when you can ship, otherwise your payment provider won't be happy.
+    Your card will be charged as soon as you make your donation. In the event
+    that our fundraising goal is not met, your donation will be fully refunded.
+  </p>
+
+  <h5>Is this secure?</h5>
+  <p>
+    Yes. All your payment information will be processed securely by Stripe.
   </p>
 </div>
