--- a/app/views/preorder/_header.html.erb
+++ b/app/views/preorder/_header.html.erb
@@ -1,5 +1,9 @@
 <div id="header">
   <div class="wrapper clearfix">
-    <h1 id="lockitron_header"><a href="/"><%= Settings.product_name %></a></h1>
+    <h1 id="lockitron_header" style='padding-top:10px;'>
+      <a href="/">
+        <%= image_tag 'Square.png' %>
+      </a>
+  </h1>
   </div>
 </div>
