--- a/app/views/preorder/checkout.html.erb
+++ b/app/views/preorder/checkout.html.erb
@@ -1,13 +1,29 @@
 <div class="gray_background">
   <div class="wrapper clearfix">
     <div class="main_content">
-      <h3>Donate $<%= Settings.price %></h3>
+      <h3>Let's do this.</h3>
       <p>
-        Enter your email address below.
+        Enter your email and donation below.
       </p>
 
       <%= form_tag "/preorder/prefill", :id => "checkout" do %>
-        <%= email_field_tag "email", @email, :placeholder => "me@squareup.com", :required => "required", :id => "email" %>
+        <%= email_field_tag "email", @email,
+          placeholder: 'me@squareup.com',
+          required: 'required',
+          id: 'email'
+        %>
+        <%= image_tag 'bullet.png', id: 'bullet' %>
+        <%= select_tag 'quantity', options_for_select([
+          ['$10',  1],
+          ['$20',  2],
+          ['$30',  3],
+          ['$50',  5],
+          ['$100', 10],
+          ['$250', 25],
+          ['$500', 50]],
+          @quantity
+        ) %>
+
         <%= hidden_field_tag "preorder", true %>
 
         <br />
