--- a/app/views/preorder/homepage/_stats.html.erb
+++ b/app/views/preorder/homepage/_stats.html.erb
@@ -44,7 +44,7 @@
       <p id="ship_date"><%= Settings.ships %></p>
       <a href="/preorder/checkout" class="blue_button reserve"><%= Settings.call_to_action %></a>
       <p id="price">
-        Craft the span.
+        Craft the span. Donate today.
       <p>
         Don't worry. In the event that we don't reach our fundraising goal,
         your donation will be fully refunded. All donations go to
