--- a/app/views/preorder/checkout/_sidebar.html.erb
+++ b/app/views/preorder/checkout/_sidebar.html.erb
@@ -7,6 +7,7 @@
 
   <h5>Is this secure?</h5>
   <p>
-    Yes. All your payment information will be processed securely by Stripe.
+    Yes. All your payment information will be processed securely by
+    <%= link_to 'Stripe', 'https://stripe.com', target: '_blank' %>.
   </p>
 </div>
