--- a/app/assets/stylesheets/checkout.css.scss
+++ b/app/assets/stylesheets/checkout.css.scss
@@ -12,6 +12,15 @@
   {
     line-height: 1.5;
   }
+  #error-message {
+    color: #f00;
+    background: #fee;
+    border: 1px solid #fcc;
+    border-radius: 10px;
+    padding: 10px;
+    text-align: center;
+    margin-bottom: 20px;
+  }
   #checkout {
     #email {
       padding: 15px;
