Add dance gif after donation

--- a/app/views/preorder/share.html.erb
+++ b/app/views/preorder/share.html.erb
@@ -4,6 +4,9 @@
       Thanks for your donation!
     </h2>
     <p>
+      <%= image_tag 'dance.gif' %>
+    </p>
+    <p>
       You're <%= Settings.primary_stat_verb %> number
       <span id="backer_number">
         <%= @order.number %>
