Show correct backer count

--- a/app/views/preorder/share.html.erb
+++ b/app/views/preorder/share.html.erb
@@ -9,7 +9,7 @@
     <p>
       You're <%= Settings.primary_stat_verb %> number
       <span id="backer_number">
-        <%= @order.number %>
+        <%= User.count %>
       </span>
     </p>
     <br />
